c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/arguments_in_registers/fibonacci.c
int fib(int n) {
    if (n == 0 || n == 1) {
        return n;
    } else {
        return fib(n - 1) + fib(n - 2);
    }
}

int main(void) {
    int n = 6;
    return fib(n);
}