c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_types/divide_by_function.c
int x(void);

int main(void) {
    int a = 10 / x;
    return 0;
}